Skip tests for regexes for perl < 5.12; write documentation

--- a/Changes
+++ b/Changes
@@ -1,4 +1,2 @@
-0.00_03 2015-10-17
-* Turn and face the strain
-* Look out you rock'n'rollers
-
+0.00_04 2015-10-17
+* Initial version for rough testing
