--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.02_01 2015-10-20
+* Removed prerequisite JSON::Parse (was actually only required for testing).
+* Handle SVt_PVMG better
+
 0.02 2015-10-20
 * Undefined values are now printed as "null"
 
