--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
-0.02_01 2015-10-20
+0.02_02 2015-10-20
 * Removed prerequisite JSON::Parse (was actually only required for testing).
-* Handle SVt_PVMG better
+* Handle magic and blessed types slightly better (work in progress).
 
 0.02 2015-10-20
 * Undefined values are now printed as "null"
