--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
-0.03_01 2015-10-22
-* Souped up
+0.03_02 2015-10-22
+* Performance increases for output of strings and integers
+* Unicode handling added
 
 0.03 2015-10-21
 * JSON::Parse changed from prerequisite to test prerequisite .. and back
