--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.04_02 2015-10-24
+* Partial handling of NaN, negative and positive infinity via
+  stringification.
+* Removed dereferencing behaviour for objects.
+* Documentation clarifies some behaviours.
+* Further performance wrangling for integers.
+
 0.04 2015-10-22
 * Performance increases for output of strings and integers
 * Partial Unicode handling added
