--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
-0.06_01 2015-10-28
+0.06_02 2015-10-28
 * More flexible formatting for floating point numbers
+* Experimental support for booleans
+* User option to escape / into \/.
 
 0.06 2015-10-27
 * More tests and benchmarks for floating point
