Roundtrip with JSON::Parse

--- a/Changes
+++ b/Changes
@@ -1,9 +1,10 @@
-0.06_03 2015-10-28
+0.06_04 2015-10-28
 * More flexible formatting for floating point numbers
 * Experimental support for booleans
 * User option to escape / into \/.
 * User-generated JSON callbacks
 * Validation of user-generated JSON
+* Round-trips with JSON::Parse 0.36_01
 
 0.06 2015-10-27
 * More tests and benchmarks for floating point
