--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 0.14 2015-11-08
 * Returning the undefined value causes a halt of execution
+* Validates four byte UTF-8 correctly
+* Pure Perl module now fully compatible with XS module.
 
 0.13 2015-11-07
 * Add "obj_handler" method which hands all objects to the user
