--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
-0.23_01 2017-06-12
-* Changes for Windows compilation only
+0.24 2017-06-13
+* Windows compilation
 
 0.23 2017-06-06
 * Update PP module
