--- a/Changes
+++ b/Changes
@@ -1,8 +1,9 @@
 0.27 2020-11-22
 * Add indentation of output
+* Use integer not string for all context-dependent variables
 
 0.26 2020-11-22
-* Fixed bug in PVIV (string and number) handling
+* Use string with quotes for integer context-dependent variables
 
 0.25 2020-02-14
 * Bug fix for uninitialised arrays
