--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.27_01 2020-11-23
+* Test context-dependent variables & use numerical part only if valid.
+
 0.27 2020-11-22
 * Add indentation of output
 * Use integer not string for all context-dependent variables
