--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
-0.28_05 2020-12-24
-* Use the qsort_r from FreeBSD source code instead of rooting around
-* Add "set" and options in new.
+0.29 2020-12-24
+* Allow options in new, create_json, and create_json_strict
+* Add "set" to set most of the options
 * Add sorting of indented output by key
 * Add user-defined sort
 
