--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.29_01 2021-01-03
+
+* Add write_json method based on File::JSON::Slurper
+
 0.29 2020-12-24
 * Allow options in new, create_json, and create_json_strict
 * Add "set" to set most of the options
