--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
-0.30_03 2021-02-09
+0.30_04 2021-02-10
 
 * Rename "run" to "create"
 * Implement downgrade_utf8 in the PP (Pure Perl) version
+* Test the PP version on installation
 
 0.30 2021-01-04
 
