--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
-0.30_06 2021-02-11
+0.31 2021-02-11
 
 * Rename "run" to "create"
 * Implement downgrade_utf8 in the PP (Pure Perl) version
+* Add native booleans (JSON::Create::Bool) for this module
 
 0.30 2021-01-04
 
