--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.32_01 2021-04-28
+
+* Allow parallel testing
+* Better handling of string/double/integer scalars
+
 0.32 2021-02-22
 
 * Remove debugging fprintf accidentally sent to CPAN
