--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.34_01 2021-07-15
+
+* Fix a problem with blessed values (blessed numbers have quotes added)
+
 0.34 2021-05-01
 
 * Add newlines after isolated scalars, so
